--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -1,37 +1,109 @@
 ---
 - name: "ipmi_exporter | Assert that system manager is systemd"
-  assert:
+  ansible.builtin.assert:
     that:
       - "hostvars[inventory_hostname]['ansible_service_mgr'] == 'systemd'"
-    msg: "System manager is not systemd"
+    fail_msg: "System manager is not systemd"
     quiet: "true"
 - name: "ipmi_exporter | Add the OS specific varibles"
   ansible.builtin.include_vars:
     file: "{{ hostvars[inventory_hostname]['ansible_os_family'] + '.yml' }}"
 - name: "ipmi_exporter | Set facts about ipmi_exporter role"
   ansible.builtin.set_fact:
-    ipmi_exporter_version: "{{ hostvars[inventory_hostname]['ipmi_exporter'] |
+    ipmi_exporter_version:
+      "{{ hostvars[inventory_hostname]['ipmi_exporter'] |
       community.general.json_query('[].version | [0]') | default(omit) }}"
-    ipmi_exporter_settings: "{{ hostvars[inventory_hostname]['ipmi_exporter'] |
-      community.general.json_query('[].settings[] | [0]') | default(omit) }}"
+    ipmi_exporter_options:
+      "{{ hostvars[inventory_hostname]['ipmi_exporter'] |
+      community.general.json_query('[].options | [0]') | default(omit) }}"
+    ipmi_exporter_settings:
+      "{{ hostvars[inventory_hostname]['ipmi_exporter'] |
+      community.general.json_query('[].settings | [0]') | default(omit) }}"
+    ipmi_exporter_package_state:
+      "{{ hostvars[inventory_hostname]['ipmi_exporter'] |
+      community.general.json_query('[].package_state | [0]') | default(omit) }}"
+- name: "ipmi_exporter | Assert that ipmi_exporter package state in valid value"
+  ansible.builtin.assert:
+    that:
+      - "vars['ipmi_exporter_package_state'] in ['present', 'latest']"
+    fail_msg: "{{ 'package_state must be in `present` or `latest`,
+      current is: ' + vars['ipmi_exporter_package_state'] }}"
+    quiet: "true"
+  when:
+    - "vars['ipmi_exporter_package_state'] is defined"
+    - "vars['ipmi_exporter_package_state'] != []"
+    - "vars['ipmi_exporter_package_state'] != ''"
+- name: "ipmi_exporter | Set package state to 'present' cause value is not
+    defined"
+  ansible.builtin.set_fact:
+    ipmi_exporter_package_state: "present"
+  when:
+    - "vars['ipmi_exporter_package_state'] is defined"
+    - "vars['ipmi_exporter_package_state'] == ''"
 - name: "ipmi_exporter | Get last release version from Github"
   community.general.github_release:
     user: "prometheus-community"
     repo: "ipmi_exporter"
     action: "latest_release"
-  run_once: "true"
+  run_once: true
   register: "ipmi_exporter_version_tag"
   delegate_to: "localhost"
   when:
     - "vars['ipmi_exporter_version'] is defined"
     - "vars['ipmi_exporter_version'] == 'latest'"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] is defined"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] != ''"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] |
+       community.general.json_query(vars['ipmi_exporter_install_package'])
+       is defined"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] |
+       community.general.json_query(vars['ipmi_exporter_install_package'])
+       == 'false'"
+  vars:
+    ipmi_exporter_install_package:
+      "[] | map(&install_package || 'false', @) | [0]"
 - name: "ipmi_exporter | Set facts about ipmi_exporter role"
   ansible.builtin.set_fact:
+    ipmi_exporter_package_state: "present"
     ipmi_exporter_version: "{{ vars['ipmi_exporter_version_tag']['tag'][1:] }}"
-- name: "ipmi_exporter | Create ipmi_exporter catalog"
+  when:
+    - "vars['ipmi_exporter_version_tag'] is defined"
+    - "not vars['ipmi_exporter_version_tag']['skipped']"
+- name: "ipmi_exporter | Create ipmi_exporter catalog [package deployment]"
   ansible.builtin.file:
-    path: "{{ vars['ipmi_exporter_dest'] }}"
+    path: "{{ hostvars[inventory_hostname]['ipmi_exporter_conf_dest'] }}"
     state: "directory"
     owner: "root"
     group: "root"
     mode: "0755"
+  when:
+    - "hostvars[inventory_hostname]['ipmi_exporter'] is defined"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] != ''"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] |
+       community.general.json_query(vars['ipmi_exporter_install_package'])
+       is defined"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] |
+       community.general.json_query(vars['ipmi_exporter_install_package'])
+       == 'false'"
+  vars:
+    ipmi_exporter_install_package:
+      "[] | map(&install_package || 'false', @) | [0]"
+- name: "ipmi_exporter | Create ipmi_exporter catalog [not package deployment]"
+  ansible.builtin.file:
+    path: "{{ hostvars[inventory_hostname]['ipmi_exporter_dest'] }}"
+    state: "directory"
+    owner: "root"
+    group: "root"
+    mode: "0755"
+  when:
+    - "hostvars[inventory_hostname]['ipmi_exporter'] is defined"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] != ''"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] |
+       community.general.json_query(vars['ipmi_exporter_install_package'])
+       is defined"
+    - "hostvars[inventory_hostname]['ipmi_exporter'] |
+       community.general.json_query(vars['ipmi_exporter_install_package'])
+       == 'false'"
+  vars:
+    ipmi_exporter_install_package:
+      "[] | map(&install_package || 'false', @) | [0]"
