--- a/tasks/download.yml
+++ b/tasks/download.yml
@@ -1,10 +1,16 @@
 ---
+- name: "ipmi_exporter | Include packages tasks [for deps]"
+  ansible.builtin.import_tasks:
+    file: "packages.yml"
+  vars:
+    ipmi_exporter_pacakges_variant:
+      "{{ hostvars[inventory_hostname]['ipmi_exporter_packages_deps'] }}"
 - name: "ipmi_exporter | Download & unarchive exporter binary from tarball"
   ansible.builtin.unarchive:
     src: "{{ vars['ipmi_exporter_url'] + '/v' + vars['ipmi_exporter_version'] +
       '/ipmi_exporter-' + vars['ipmi_exporter_version'] + '.' +
       vars['ipmi_exporter_arch'] + '.tar.gz' }}"
-    dest: "{{ vars['ipmi_exporter_dest'] }}"
+    dest: "{{ hostvars[inventory_hostname]['ipmi_exporter_dest'] }}"
     remote_src: "yes"
     include: "{{ 'ipmi_exporter-' + vars['ipmi_exporter_version'] + '.' +
       vars['ipmi_exporter_arch'] + '/ipmi_exporter' }}"
@@ -13,15 +19,17 @@
     group: "root"
 - name: "ipmi_exporter | Move exporter binary arfter unarchive"
   ansible.builtin.command:
-    cmd: "{{ 'mv ' + vars['ipmi_exporter_dest'] + '/ipmi_exporter-' +
-      vars['ipmi_exporter_version'] + '.' + vars['ipmi_exporter_arch'] +
-      '/ipmi_exporter ' + vars['ipmi_exporter_dest'] + '/' }}"
-    removes: "{{ vars['ipmi_exporter_dest'] + '/ipmi_exporter-' +
-      vars['ipmi_exporter_version'] + '.' + vars['ipmi_exporter_arch'] +
-      '/ipmi_exporter' }}"
+    cmd: "{{ 'mv ' + hostvars[inventory_hostname]['ipmi_exporter_dest'] +
+      '/ipmi_exporter-' + vars['ipmi_exporter_version'] + '.' +
+      vars['ipmi_exporter_arch'] + '/ipmi_exporter ' +
+      hostvars[inventory_hostname]['ipmi_exporter_dest'] + '/' }}"
+    removes: "{{ hostvars[inventory_hostname]['ipmi_exporter_dest'] +
+      '/ipmi_exporter-' + vars['ipmi_exporter_version'] + '.' +
+      vars['ipmi_exporter_arch'] + '/ipmi_exporter' }}"
 - name: "ipmi_exporter | Deleting unnecessary directory"
   ansible.builtin.file:
-    path: "{{ vars['ipmi_exporter_dest'] + '/ipmi_exporter-' +
-      vars['ipmi_exporter_version'] + '.' + vars['ipmi_exporter_arch'] }}"
+    path: "{{ hostvars[inventory_hostname]['ipmi_exporter_dest'] +
+      '/ipmi_exporter-' + vars['ipmi_exporter_version'] + '.' +
+      vars['ipmi_exporter_arch'] }}"
     state: "absent"
-  diff: "false"
+  diff: false
