--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,33 +1,22 @@
 ---
 - name: "ipmi_exporter | Install the required packages in Redhat derivatives"
-  block:
-    - name: "ipmi_exporter | Install the required packages for RedHat via yum"
-      ansible.builtin.yum:
-        name: "{{ hostvars[inventory_hostname]['ipmi_exporter_package'] }}"
-        state: "present"
-        update_cache: "yes"
-      when:
-        - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'yum'"
-    - name: "ipmi_exporter | Install the required packages for RedHat via dnf"
-      ansible.builtin.dnf:
-        name: "{{ hostvars[inventory_hostname]['ipmi_exporter_package'] }}"
-        state: "present"
-        update_cache: "yes"
-      when:
-        - "hostvars[inventory_hostname]['ansible_pkg_mgr'] == 'dnf'"
+  ansible.builtin.dnf:
+    name: "{{ ipmi_exporter_pacakges_variant }}"
+    state: "{{ vars['ipmi_exporter_package_state'] | default(omit) }}"
+    update_cache: "yes"
   when:
     - "hostvars[inventory_hostname]['ansible_os_family'] == 'RedHat'"
 - name: "ipmi_exporter | Install the required packages in Debian derivatives"
   ansible.builtin.apt:
-    name: "{{ hostvars[inventory_hostname]['ipmi_exporter_package'] }}"
-    state: "present"
+    name: "{{ ipmi_exporter_pacakges_variant }}"
+    state: "{{ vars['ipmi_exporter_package_state'] | default(omit) }}"
     update_cache: "yes"
   when:
     - "hostvars[inventory_hostname]['ansible_os_family'] == 'Debian'"
 - name: "ipmi_exporter | Install the required packages in ArchLinux derivatives"
   community.general.pacman:
-    name: "{{ hostvars[inventory_hostname]['ipmi_exporter_package'] }}"
-    state: "present"
+    name: "{{ ipmi_exporter_pacakges_variant }}"
+    state: "{{ vars['ipmi_exporter_package_state'] | default(omit) }}"
     update_cache: "yes"
   when:
     - "hostvars[inventory_hostname]['ansible_os_family'] == 'Archlinux'"
